changed artist show page with a little fix on image link and spacing

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -16,11 +16,6 @@
 }
 
 .intro-product {
-  position: relative;
-  width: 1000px;
-  min-width: 350px;
-  min-height: 500px;
-  height: auto;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -30,7 +25,7 @@
   width: 1000px;
   display: flex;
   margin: 0 auto;
-  margin-bottom: 32px
+  margin-bottom: 32px;
 }
 
 .art-container {
@@ -59,7 +54,7 @@
   margin-left: 32px;
 }
 
-.bid-area{
+.bid-area {
   display: flex;
 }
 .bid-text {
@@ -72,10 +67,10 @@
 .card-bottom {
   width: 200px;
   border-radius: 3px;
-  box-shadow: 0 0 5px rgb(230,230,230);
+  box-shadow: 0 0 5px rgb(230, 230, 230);
   text-align: center;
   padding: 20px;
-  border: 1px solid rgb(230,230,230);
+  border: 1px solid rgb(230, 230, 230);
   margin-top: 32px;
 }
 
